# pyigm

./: .gitignore  .travis.yml  README.md  mockforest.py  setup.cfg  setup.py  tau_eff.py
docs/: CGM_P11.rst  CGM_examples.rst  CUBA_examples.rst  DLASystem_examples.rst  IGMSurvey_examples.rst  LLSSurvey_examples.rst  LLSSystem_examples.rst  Makefile  api.rst  cgm.rst  cgmsurvey.rst  conf.py  continuum.rst  cuba.rst  dlasurvey.rst  fN_examples.rst  fitdla.rst  fitlls.rst  fn.rst  igmfield.rst  igmguesses.rst  igmsurvey.rst  igmsys.rst  index.rst  install.rst  metallicity.rst  milkyway.rst  misc.rst  nb_to_rst.src  scripts.rst
docs/LLS_Metallicities-Wotta/: Extract_Cloudy_data-Burchett.ipynb  MCMC_output-how_to_use.ipynb  README-understanding_MCMC_output.md  README.md  README_python_get_pdf_cdf.py  cloudyiongrid.py  mcmc_met.py  queue_script.sh
docs/datasets/: Blind_CIV.ipynb  Burchett_2016.ipynb  CGM_P11.ipynb  COS-Halos_database.ipynb  COS_Halos_Examples.ipynb  DLASurvey_examples.ipynb  GGG_DLAs.ipynb  H100_DLAs.ipynb  Johnson_2015.ipynb  LLSSurvey_examples.ipynb  LLS_lowz.ipynb  MilkyWay_absline.ipynb  QPQ678_Examples.ipynb  QPQ_Examples.ipynb  Richter17_Galactic_CGM.ipynb  XQ100_systems.ipynb
docs/examples/: CGM_Models.ipynb  CGM_examples.ipynb  COS-Halos_database.ipynb  COS_Dwarfs_updates.ipynb  COS_Halos_Examples.ipynb  CUBA_examples.ipynb  DLASurvey_examples.ipynb  DLA_abund_cookbook.ipynb  IGMGalaxyField_examples.ipynb  IGMSystem_examples.ipynb  IGM_reionization.ipynb  LLSSurvey_examples.ipynb  LLS_fitting.ipynb  (+10 more)
pyigm/: __init__.py  igmsys.py  utils.py
(+313 files in other folders)
