#[build_sphinx]
#source-dir = docs
#build-dir = docs/_build
#all_files = 1
#
#[upload_docs]
#upload-dir = docs/_build/html
#show-response = 1
#
[tools:pytest]
minversion = 2.2
norecursedirs = build #docs/_build
###doctest_plus = enabled
#
[ah_bootstrap]
auto_use = True

[metadata]
package_name = pyigm
description = A package for analysing the Intergalactic Medium
#long_description = A package for analysing 1d spectra, especially galaxy and quasar spectra.
author = J. X. Prochaska and associates
author_email = xavier@ucolick.org
license = BSD
edit_on_github = False
github_project = pyigm/pyigm
